Gemの付与Apiの実装
