# Server/src/api.rs
@@ -1,6 +1,7 @@
 pub mod auth;
 pub mod battle;
 pub mod chat;
+pub mod debug;
 pub mod device;
 pub mod internal;
 pub mod player;
